--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"editor.formatOnSave": true,
 	"prettier.configPath": ".prettierrc",
-	"editor.defaultFormatter": "esbenp.prettier-vscode"
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"circleci.persistedProjectSelection": ["gh/dnoc/coffee-journal"]
 }
