--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"embla-carousel-svelte": "^8.3.0"
+	}
 }
